// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <div
        className="display-flex-start"
      >
        <div
          className="flex-1"
        >
          <Component />
        </div>
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
      </SubmitButton>
      <ResetButtonLink
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly 2`] = `
<Modal
  contentLabel="settings.almintegration.form.header.create"
  onRequestClose={[MockFunction]}
  size="medium"
>
  <form
    className="views-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        settings.almintegration.form.header.create
      </h2>
    </div>
    <div
      className="modal-body modal-container"
    >
      <div
        className="display-flex-start"
      >
        <div
          className="flex-1"
        >
          <Component />
        </div>
        <Alert
          className="huge-spacer-left flex-1"
          variant="info"
        >
          <span>
            Help me
          </span>
        </Alert>
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <DeferredSpinner
        className="spacer-right"
        loading={false}
        timeout={100}
      />
      <SubmitButton
        disabled={true}
      >
        settings.almintegration.form.save
      </SubmitButton>
      <ResetButtonLink
        onClick={[Function]}
      >
        cancel
      </ResetButtonLink>
    </div>
  </form>
</Modal>
`;
